--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -1,8 +1,9 @@
 @media (min-width:900px){
     
     .main-container{
-        background:url(../images/bg-desktop.svg) no-repeat;
-        background-size: contain;
+        padding: 3em 0 0 0;
+        background:url(../images/bg-desktop.svg) -4rem center no-repeat;
+        background-size: unset;
     }
 
     .img-logo{
@@ -13,21 +14,26 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         text-align: left;
-        column-gap: 3rem;
+        column-gap: 1rem;
         align-items: center;
+        
+        p, button{
+            font-size: 1.07em;
+        }
     }
 
     .eye-candy{
-        margin-bottom: 0;
+        width: 95%;
+        margin: 4em 0 0 0;
     }
 
     .button{
         font-size: 1em;
-        padding: .8rem 3em;
+        padding: 1rem 4.2rem;
     }
 
     .social-links{
-        margin-top: 1.5em;
+        margin-top: 0;
         text-align: right;
     li{
         width: 2.6em;
