--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: clamp(1.5em, 3.5vw, 2.25em);
+  font-size: clamp(1.5em, 3.5vw, 2.4em);
   font-weight: 700;
 }
 
@@ -49,7 +49,7 @@ img {
 }
 
 main p {
-  margin: 1.7em auto;
+  margin: 1.7rem auto;
 }
 
 .brand {
@@ -114,8 +114,9 @@ main p {
 
 @media (min-width: 900px) {
   .main-container {
-    background: url(../images/bg-desktop.svg) no-repeat;
-    background-size: contain;
+    padding: 3em 0 0 0;
+    background: url(../images/bg-desktop.svg) -4rem center no-repeat;
+    background-size: unset;
   }
   .img-logo {
     width: 12.5rem;
@@ -126,21 +127,25 @@ main p {
     -ms-grid-columns: 1fr 1fr;
         grid-template-columns: 1fr 1fr;
     text-align: left;
-    -webkit-column-gap: 3rem;
-            column-gap: 3rem;
+    -webkit-column-gap: 1rem;
+            column-gap: 1rem;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
   }
+  main p, main button {
+    font-size: 1.07em;
+  }
   .eye-candy {
-    margin-bottom: 0;
+    width: 95%;
+    margin: 4em 0 0 0;
   }
   .button {
     font-size: 1em;
-    padding: .8rem 3em;
+    padding: 1rem 4.2rem;
   }
   .social-links {
-    margin-top: 1.5em;
+    margin-top: 0;
     text-align: right;
   }
   .social-links li {
