--- a/css/styles.scss
+++ b/css/styles.scss
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6{
 }
 
 h1{
-    font-size: clamp(1.5em, 3.5vw, 2.25em);
+    font-size: clamp(1.5em, 3.5vw, 2.4em);
     font-weight: 700;
 }
 
@@ -45,7 +45,7 @@ img{
 
 main{
     p{
-        margin: 1.7em auto;
+        margin: 1.7rem auto;
     }
 }
 
