--- a/css/_media-queries.scss
+++ b/css/_media-queries.scss
@@ -23,13 +23,13 @@
     }
 
     .eye-candy{
-        width: 94%;
+        width: 93%;
         margin: 5em 0 0 0;
     }
 
     .button{
-        font-size: 1em;
-        padding: 1rem 4.2rem;
+        // font-size: 1em;
+        padding: .8rem 4.2rem;
     }
 
     .social-links{
